# rust-demo-http-request

./: Cargo.toml  README.md
src/: main.rs
